[package]
name = "scoped_css"
description = "A crate for the css! macro"
license = "MIT/Apache-2.0"
version = "0.0.1"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/scoped_css"

[dependencies]
proc-macro2 = { version = "1.0.1", features = ["span-locations"] }
quote = "1.0.2"
nom = "5.0.0"
itertools = "0.8.0"

[lib]
proc-macro = true

[features]
