[package]
name = "smithy_css_macro"
description = "A crate for the css! macro"
license = "MIT/Apache-2.0"
version = "0.0.1"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/smithy_css_macro"
homepage = "https://www.smithy.rs"
# documentation = "https://docs.smithy.rs/smd_macro"

[dependencies]
proc-macro2 = { version = "1.0.1", features = ["span-locations"] }
quote = "0.6.13"
nom = "5.0.0"
smithy = { version = "0.0.6", path = "../../../smithy/crates/smithy", features = [
  "smd-logs"
] }

[lib]
proc-macro = true

[features]
